# spcom

./: README.md
spcom/: CMakeLists.txt  autocomplete.sh
spcom/include/: assert.h  btable.h  btree.h  charmap.h  cmd.h  common.h  config.h  ctohex.h  eol.h  keybind.h  log.h  main.h  main_opts.h  misc.h  opq.h  opt.h  opt_argviter.h  opt_section.h  opt_shortstr.h  opts.h  outfmt.h  port.h  port_info.h  port_opts.h  port_wait.h  portinfo.h  pre_defs.h  shell.h  shell_rl.h  shell_rl_utils.h  str.h  str_split.h  strbuf.h  strto.h  strto_r.h  termios_debug.h  timeout.h  utils.h  vt_defs.h
spcom/src/: assert.c  btree.c  charmap.c  cmd.c  common.c  ctohex.c  eol.c  errnotostr.c  inpipe.c  ipipe.c  keybind.c  log.c  main.c  main_opts.c  misc.c  opq.c  opt.c  opt_ap.c  opt_argviter.c  opt_cfgfile.c  opt_parse.c  opt_shortstr.c  opts.c  outfmt.c  port.c  port_info.c  port_opts.c  port_wait.c  portinfo.c  shell.c  shell_mode_cmd.c  shell_mode_cooked.c  shell_mode_raw.c  shell_rl.c  str.c  str_split.c  str_split_quoted.c  str_strcasestr.c  strbuf.c  strerrorname_np.c  (+5 more)
test/: echo_server.py  test.py
test/linux/: README.md  install_tty0tty.sh  tty0tty.sh
